<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="xevate.com.ratex.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="MoneyInput"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/priceinputTxtEdit" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/tienlist"
        android:prompt="@string/tienji"
        android:layout_alignBaseline="@+id/priceinputTxtEdit"
        android:layout_alignBottom="@+id/priceinputTxtEdit"
        android:layout_toRightOf="@+id/priceinputTxtEdit"
        android:layout_marginLeft="1dp"
        android:layout_marginStart="1dp" />

    <Button
        android:id="@+id/okbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ok"
        android:layout_alignBaseline="@+id/priceinputTxtEdit"
        android:layout_alignBottom="@+id/priceinputTxtEdit"
        android:layout_toRightOf="@+id/spinner1"
        android:layout_marginLeft="1dp"
        android:layout_marginStart="1dp" />


    <ListView
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/priceinputTxtEdit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp" />

</RelativeLayout>
